flipza-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app.kubernetes.io/name: semesterarbeit
  name: semesterarbeit
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: semesterarbeit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: semesterarbeit    
    spec:
      containers:
      - image: flipza/semesterarbeit
        imagePullPolicy: Always
        name: semesterarbeit
        volumeMounts:
        - mountPath: "/usr/www/html/myspace"
          subPath: myspace
          name: "web-storage"
      # Volumes in Host
      volumes:
      - name: web-storage
        persistentVolumeClaim:
          claimName: data-claim
